2009-06-12  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Show empty categories in task launcher.
	Fixes: NB#121803

	* src/launcher/hd-launcher-tree.c:

2009-06-12  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/tidy/tidy-cached-group.c: Tweaks to improve cached-group 
	performance. Not used currently, but may well be used in
	rotation transition.

2009-06-12  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_map_notify): Put confirmation note
	to the front group. Fixes: NB#117673

2009-06-11  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Order applications by ctime if not hard-coded in position.
	Fixes: NB#116215

	* src/launcher/hd-launcher-item.c: Added more hard-coded apps.
	* src/launcher/hd-launcher-item.h:
	* src/launcher/hd-launcher-tree.c:

2009-06-11  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-task-navigator (turnoff_fun, turnoff_effect_frame):
	  Streamlined with the other effect (again).

2009-06-11  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/util/hd-dbus.c (hd_dbus_prevent_display_blanking): New function
	to send display blanking prevention message to MCE.
	(hd_dbus_disable_display_blanking): New function to switch display
	blanking prevention on/off.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_check_do_not_disturb_flag): Call
	hd_dbus_disable_display_blanking when we are in DnD mode.
	Fixes: NB#118192

2009-06-11  Laszlo Pere  <lpere@blumsoft.eu>

	* src/mb/hd-animation-actor.c: Fixed GLib warnings.

2009-06-11  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#120847 Text of time in notification goes out of box window
	NB#121060 Indication is done on top of Tasks button, with an
		  animation and highlight for every one min even when
		  there is no new event.
	NB#121584 Missed call notification text comes outside of the window
	(and NB#120626 Number of notifications is not coming in task
	 switcher but that's not complete)
